# SendEmail_libcurl

./: .gitignore  CMakeLists.txt  README.md  file1.txt  file2.txt  libcurl_install.sh  main.cpp  rebuild_email_sender.sh  start_email_sender.sh
smtp/: email_config.h  libcurl_smtp.cpp  libcurl_smtp.h
